// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Integration] Test all plugins [Sync-snapshot] Case 2: Client with highest commit id sync with master 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "approved": false,
    "chain": "[{\\"fn\\":\\"insertOne\\",\\"args\\":[{\\"_id\\":\\"ObjectID\\",\\"table\\":10,\\"name\\":\\"Testing\\"}]}]",
    "collectionName": "Model",
    "condition": "null",
    "data": Object {
      "currentHighestUUID": "UUID",
      "docId": "ObjectID",
      "snapshot": true,
      "syncUUID": "syncUUID",
    },
    "fromMaster": true,
    "id": 4,
    "tags": Array [],
    "uuid": "uuid-v1",
  },
]
`;

exports[`[Integration] Test all plugins [Sync-snapshot] Case 2: Client with highest commit id sync with master 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "collectionName": "DummyCollection",
    "id": 3,
    "uuid": "uuid-v1",
  },
]
`;

exports[`[Module] Fake doc Case 1: Create fake 1`] = `
Object {
  "_id": "ObjectID",
  "test": 1,
}
`;

exports[`[Module] Fake doc Case 1: Create fake 2`] = `Array []`;

exports[`[Module] Fake doc Case 1: Create fake 3`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 1: Create fake 4`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 2: Find one and update 1`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 2: Find one and update 2`] = `Array []`;

exports[`[Module] Fake doc Case 2: Find one and update 3`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 2-a: Find one and update 1`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 2-a: Find one and update 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 2-a: Find one and update 3`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 3: Update then find 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 3: Update then find 2`] = `Array []`;

exports[`[Module] Fake doc Case 3: Update then find 3`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 4: Query delete 1`] = `Array []`;

exports[`[Module] Fake doc Case 4: Query delete 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 4: Query delete 3`] = `
Array [
  Object {
    "_deleted": true,
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 5: Handle remove fake 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 5: Handle remove fake 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Fake doc Case 5: Handle remove fake 3`] = `Array []`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 1`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 2`] = `
Object {
  "_id": "ObjectID",
  "test": 1,
}
`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 3`] = `
Object {
  "_id": "ObjectID",
  "test": 1,
}
`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 4`] = `
Object {
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
  ],
  "test": 1,
}
`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 5`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
  ],
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 6: With master and 2 clients 6`] = `
Object {
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
    Object {
      "test": 3,
    },
  ],
  "test": 1,
}
`;

exports[`[Module] Fake doc Case 7: Case delete and then master update 1`] = `null`;

exports[`[Module] Fake doc Case 7: Case delete and then master update 2`] = `
Object {
  "_id": "ObjectID",
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 7: Case delete and then master update 3`] = `null`;

exports[`[Module] Fake doc Case 8: Create and do a query update 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 8: Create and do a query update 2`] = `Array []`;

exports[`[Module] Fake doc Case 8: Create and do a query update 3`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 9: Reapply query after remove fake 1`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
  ],
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 9: Reapply query after remove fake 2`] = `
Object {
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
    Object {
      "test": 2,
    },
  ],
}
`;

exports[`[Module] Fake doc Case 9: Reapply query after remove fake 3`] = `
Object {
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
    Object {
      "test": 2,
    },
  ],
}
`;

exports[`[Module] Fake doc Case 9: Reapply query after remove fake 4`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 2,
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
    Object {
      "test": 2,
    },
  ],
  "test": 2,
}
`;

exports[`[Module] Fake doc Case 10: Reapply query and remove only 1 fake doc 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "arr": Array [
      Object {
        "test": 1,
      },
    ],
    "test": 2,
  },
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "secondDoc": true,
  },
]
`;

exports[`[Module] Fake doc Case 10: Reapply query and remove only 1 fake doc 2`] = `
Object {
  "_id": "ObjectID",
  "arr": Array [
    Object {
      "test": 1,
    },
    Object {
      "test": 2,
    },
  ],
}
`;

exports[`[Module] Fake doc Case 10: Reapply query and remove only 1 fake doc 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "arr": Array [
      Object {
        "test": 1,
      },
      Object {
        "test": 2,
      },
    ],
  },
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "secondDoc": true,
  },
]
`;

exports[`[Module] Fake doc Case 10: Reapply query and remove only 1 fake doc 4`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 3,
    "_id": "ObjectID",
    "arr": Array [
      Object {
        "test": 1,
      },
      Object {
        "test": 2,
      },
    ],
    "test": 2,
  },
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "secondDoc": true,
  },
]
`;

exports[`[Module] Fake doc Case 10: Reapply query and remove only 1 fake doc 5`] = `
Array [
  Object {
    "_id": "ObjectID",
    "fakeId": 4,
    "highestCommitId": 3,
    "lastTimeSyncWithMaster": "2021-01-27T17:00:00.000Z",
    "masterHighestId": 3,
  },
]
`;

exports[`[Module] Fake doc Case 11: findOneAndUpdate fake 1`] = `
Object {
  "_id": "ObjectID",
  "test": Array [],
}
`;

exports[`[Module] Fake doc Case 11: findOneAndUpdate fake 2`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "test": Array [
    1,
  ],
}
`;

exports[`[Module] Fake doc Case 11: findOneAndUpdate fake 3`] = `
Object {
  "_fakeDate": "2021-01-27T17:00:00.000Z",
  "_fakeId": 1,
  "_id": "ObjectID",
  "test": Array [
    1,
  ],
}
`;

exports[`[Module] Fake doc Case 12: find with sort 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "test": 2,
  },
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 1,
  },
  Object {
    "_id": "ObjectID",
    "test": -1,
  },
]
`;

exports[`[Module] Fake doc Case 12: find with sort 2`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "test": 2,
  },
]
`;

exports[`[Module] Fake doc Case 13: find with skip 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 2,
    "_id": "ObjectID",
    "test": 2,
  },
  Object {
    "_id": "ObjectID",
    "test": 3,
  },
  Object {
    "_id": "ObjectID",
    "test": 4,
  },
]
`;

exports[`[Module] Test bulk write Case 1: Test bulk write with client 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "items": Array [
      Object {
        "_id": "ObjectID",
        "id": 0,
        "name": "A",
        "quantity": "100",
      },
    ],
    "table": 10,
  },
]
`;

exports[`[Module] Test bulk write Case 2: Test bulk write 2 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "arr": Array [
      Object {
        "test": 1,
      },
    ],
    "items": Array [
      Object {
        "_id": "ObjectID",
        "arr": Array [],
        "id": 0,
        "name": "A",
      },
    ],
    "table": 10,
  },
]
`;

exports[`[Module] Test bulk write Case 2: Test bulk write 3 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
  },
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Test bulk write Case 8: Update bulkwrite 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "b": 1,
  },
]
`;

exports[`[Module] Test bulk write Case 9: Bulkwrite with fake 1`] = `
Array [
  Object {
    "_fakeDate": "2021-01-27T17:00:00.000Z",
    "_fakeId": 1,
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Test bulk write Case 9: Bulkwrite with fake 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "test": 1,
  },
]
`;

exports[`[Module] Test bulk write Case 9: Bulkwrite with fake 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "a": 1,
    "test": 1,
  },
]
`;

exports[`[Module] Test bulk write Case 9: Bulkwrite with fake 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "a": 1,
    "test": 1,
  },
]
`;
